# uol-openday-robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  mainpage.dox  manifest.xml  params.json
maps/uol-mht-3rd-floor/: map.yaml
my_first_patroller/: CMakeLists.txt  package.xml
my_first_patroller/pydev/: waypoints.csv
my_first_patroller/pydev/scripts/: rvizWaypoint.py
my_first_patroller/script/: patroller.py  serverTest.py
patroller/: CMakeLists.txt  package.xml
patroller/action/: patrol.action
patroller/pydev/launch/: ODayPatrollerLauncher.launch
patroller/pydev/scripts/: patroller2.py
patroller/script/: patroller.py  serverTest.py
ros_mary_tts/: CMakeLists.txt  README.md  package.xml
ros_mary_tts/scripts/: marybridge.py
rosbuild_ws/attention_head/: CMakeLists.txt  README.md
rosbuild_ws/attention_head/src/: attention_head.cpp  attention_head.h  vars.cpp
rqt_openday_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_openday_gui/include/rqt_openday_gui/: openday_gui.h
rqt_openday_gui/scripts/: rqt_openday_gui
rqt_openday_gui/src/rqt_openday_gui/: Images.qrc  openday_gui.cpp  openday_gui.ui
src/: attention_head.cpp  vars.cpp  vars.h
uol_launch/: CMakeLists.txt  package.xml
uol_launch/launch/: cob_people_detection.launch  patroller.launch  people_detection.launch  sensor_message_gateway_linda.launch  uol_openday.launch
uol_openday_common/: CMakeLists.txt  package.xml
uol_openday_common/action/: Find_people.action
uol_patroller/: CMakeLists.txt  package.xml
uol_patroller/data/: voiceScript.txt  waypoints.cvs
uol_patroller/data/maps/: MC3106.yaml
uol_patroller/launch/: patroller.launch
uol_patroller/script/: engage_server.py  patroller.py
uol_patroller/scripts/: engage_server.py  patroller.py
uol_rosinstall/: uol-cob.yaml
